--- a/Products/desktopSoft/desktopSoft.html
+++ b/Products/desktopSoft/desktopSoft.html
@@ -56,31 +56,31 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="10000">
-                <img src="../../../Company%20Site/assets/Products/Thogakade/1.png" class="d-block w-100" alt="...">
+                <img src="../../assets/Products/Thogakade/1.png" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-md-block">
                     <a class="btn btn-warning" href="#loadFooter" role="button">Contact Us</a>
                 </div>
             </div>
             <div class="carousel-item" data-bs-interval="2000">
-                <img src="../../../Company%20Site/assets/Products/Thogakade/2.png" class="d-block w-100" alt="...">
+                <img src="../../assets/Products/Thogakade/2.png" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-md-block">
                     <a class="btn btn-warning" href="#loadFooter" role="button">Contact Us</a>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="../../../Company%20Site/assets/Products/Thogakade/3.png" class="d-block w-100" alt="...">
+                <img src="../../assets/Products/Thogakade/3.png" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-md-block">
                     <a class="btn btn-warning" href="#loadFooter" role="button">Contact Us</a>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="../../../Company%20Site/assets/Products/Thogakade/4.png" class="d-block w-100" alt="...">
+                <img src="../../assets/Products/Thogakade/4.png" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-md-block">
                     <a class="btn btn-warning" href="#loadFooter" role="button">Contact Us</a>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="../../../Company%20Site/assets/Products/Thogakade/5.png" class="d-block w-100" alt="...">
+                <img src="../../assets/Products/Thogakade/5.png" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-md-block">
                     <a class="btn btn-warning" href="#loadFooter" role="button">Contact Us</a>
                 </div>
