--- a/Products/mobileApp/mobileApp.html
+++ b/Products/mobileApp/mobileApp.html
@@ -46,7 +46,7 @@
 <!--mobProj--------------------------------------------------------------------------------------------->
 <div class="projects row d-fles align-items-center justify-content-center" style="padding: 20px">
     <div class="proj-1-title"><p>1. StressDucer - Educational App</p></div>
-    <div class="qrcode-StressDucer"><img src="../../../Company%20Site/assets/Products/Mobile%20App/scan.png" alt=""></div>
+    <div class="qrcode-StressDucer"><img src="../../assets/Products/Mobile%20App/scan.png" alt=""></div>
     <div id="carouselExampleDark" class="carousel carousel-dark slide col-5 col-sm-5 col-md-3 col-lg-3" data-bs-ride="carousel">
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -57,31 +57,31 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="10000">
-                <img src="../../../Company%20Site/assets/Products/Mobile%20App/1.jpg" class="d-block w-100" alt="...">
+                <img src="../../assets/Products/Mobile%20App/1.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-md-block">
                     <a class="btn btn-warning" href="#loadFooter" role="button">Contact Us</a>
                 </div>
             </div>
             <div class="carousel-item" data-bs-interval="2000">
-                <img src="../../../Company%20Site/assets/Products/Mobile%20App/2.jpg" class="d-block w-100" alt="...">
+                <img src="../../assets/Products/Mobile%20App/2.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-md-block">
                     <a class="btn btn-warning" href="#loadFooter" role="button">Contact Us</a>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="../../../Company%20Site/assets/Products/Mobile%20App/3.jpg" class="d-block w-100" alt="...">
+                <img src="../../assets/Products/Mobile%20App/3.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-md-block">
                     <a class="btn btn-warning" href="#loadFooter" role="button">Contact Us</a>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="../../../Company%20Site/assets/Products/Mobile%20App/4.jpg" class="d-block w-100" alt="...">
+                <img src="../../assets/Products/Mobile%20App/4.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-md-block">
                     <a class="btn btn-warning" href="#loadFooter" role="button">Contact Us</a>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="../../../Company%20Site/assets/Products/Mobile%20App/5.jpg" class="d-block w-100" alt="...">
+                <img src="../../assets/Products/Mobile%20App/5.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-md-block">
                     <a class="btn btn-warning" href="#loadFooter" role="button">Contact Us</a>
                 </div>
