--- a/Products/mobileApp/mobileApp.html
+++ b/Products/mobileApp/mobileApp.html
@@ -103,7 +103,7 @@
 
 
 <!--footer--------------------------------------------------------------------------------------------->
-<div id="loadFooter"></div>
+<div id="loadFooter" class="footer"></div>
 <!-- Additional content specific to page 2 -->
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
