--- a/index.html
+++ b/index.html
@@ -159,7 +159,9 @@
 <div class="main-service-title-sub reveal"><p><b>We are team of developers</b></p></div>
 
 <!--footer--------------------------------------------------------------------------------------------->
-<div id="loadFooter"></div>
+<div id="loadFooter" class="footer"></div>
+
+
 <!-- Additional content specific to page 2 -->
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
