--- a/Products/products.html
+++ b/Products/products.html
@@ -64,7 +64,7 @@
 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 row-cols-lg-4 g-4 reveal" style="padding: 50px">
     <div class="col">
         <div class="card">
-            <a href="">
+            <a href="../Products/mobileApp/mobileApp.html">
                 <img src="../assets/Products/card/mobileAppDevelopment.png" class="card-img-top" alt="...">
             </a>
             <div class="card-body d-flex align-items-center justify-content-center">
@@ -74,7 +74,7 @@
     </div>
     <div class="col">
         <div class="card">
-            <a href="">
+            <a href="../Products/webApp/webApp.html">
                 <img src="../assets/Products/card/webApplication.jpg" class="card-img-top" alt="...">
             </a>
             <div class="card-body d-flex align-items-center justify-content-center">
@@ -84,7 +84,7 @@
     </div>
     <div class="col">
         <div class="card">
-            <a href="">
+            <a href="../Products/desktopSoft/desktopSoft.html">
                 <img src="../assets/Products/card/desktopApp.png" class="card-img-top" alt="...">
             </a>
             <div class="card-body d-flex align-items-center justify-content-center">
@@ -94,7 +94,7 @@
     </div>
     <div class="col">
         <div class="card">
-            <a href="https://chat.openai.com/c/50c30ce4-016a-471f-b4d4-5aec7a094c62">
+            <a href="../Products/webSite/webSite.html">
                 <img src="../assets/Products/card/websiteDevelopment.png" class="card-img-top" alt="...">
             </a>
             <div class="card-body d-flex align-items-center justify-content-center">
