--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
         <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="3" aria-label="Slide 4"></button>
     </div>
     <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="10000">
@@ -57,7 +58,7 @@
         </div>
         <div class="carousel-item" data-bs-interval="2000">
             <div class="overlay">
-                <img src="assets/Home/2.jpg" class="d-block w-100" alt="...">
+                <img src="assets/Home/3.jpg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-caption d-flex align-items-center justify-content-center flex-column">
                 <p class="carousel-inner-text">We are team of developers</p>
@@ -67,6 +68,15 @@
         <div class="carousel-item">
             <div class="overlay">
                 <img src="assets/Home/3.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-caption d-flex align-items-center justify-content-center flex-column">
+                <p class="carousel-inner-text">We are team of developers</p>
+                <a href="#loadFooter" class="btn btn-info bg-light text-primary" type="button">Contact Us</a>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <div class="overlay">
+                <img src="assets/Home/4.jpg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-caption d-flex align-items-center justify-content-center flex-column">
                 <p class="carousel-inner-text">We are team of developers</p>
