Added Home page new images

--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@700&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
+
 </head>
 <body>
 <!--nav-bar--------------------------------------------------------------------------------------------->
@@ -51,36 +59,68 @@
             <div class="overlay">
                 <img src="assets/Home/1.jpg" class="d-block w-100" alt="...">
             </div>
-            <div class="carousel-caption d-flex align-items-center justify-content-center flex-column">
-                <p class="carousel-inner-text">WELCOME to CROSSoRIGIN</p>
-                <a href="#loadFooter" class="btn btn-info bg-light text-primary" type="button">Contact Us</a>
+            <div class="carousel-caption divcaption-1">
+                <div class="right-carousel-1 col-5 col-sm-5 col-md-5 col-lg-5">
+                    <p>OUR SERVICES</p>
+                    <ul>
+                        <li>Mobile App Development</li>
+                        <li>Desktop software Development</li>
+                        <li>Web Applicaion Development</li>
+                        <li>Website Development</li>
+                    </ul>
+                </div>
+                <div class="left-carousel-1 col-7 col-sm-7 col-md-7 col-lg-7">
+                    <p class="carousel-inner-text"><b>WELCOME to CROSSoRIGIN</b></p>
+                    <p class="carousel-inner-text-sub">We create your Future</p>
+                    <a href="#loadFooter" class="contactUsBtn btn btn-success text-light" type="button">Contact Us</a>
+                </div>
             </div>
         </div>
         <div class="carousel-item" data-bs-interval="2000">
             <div class="overlay">
                 <img src="assets/Home/2.jpg" class="d-block w-100" alt="...">
             </div>
-            <div class="carousel-caption d-flex align-items-center justify-content-center flex-column">
-                <p class="carousel-inner-text">We are team of developers</p>
-                <a href="#loadFooter" class="btn btn-info bg-light text-primary" type="button">Contact Us</a>
+
+            <div class="carousel-caption divcaption-1">
+                <div class="left-carousel-1 col-7 col-sm-7 col-md-7 col-lg-7">
+                    <p class="carousel-inner-text"><b>We Are Team Of Developers</b></p>
+                    <p class="carousel-inner-text-sub">We create your Future</p>
+                    <a href="#loadFooter" class="contactUsBtn btn btn-warning text-light" type="button">Contact Us</a>
+                </div>
+                <div class="right-carousel-1 col-5 col-sm-5 col-md-5 col-lg-5">
+                    <p>Our software company is committed to delivering high-quality work, ensuring that every project meets the highest industry standards.</p>
+                </div>
             </div>
         </div>
         <div class="carousel-item">
             <div class="overlay">
-                <img src="assets/Home/3.jpg" class="d-block w-100" alt="...">
+                <img src="assets/Home/33.jpg" class="d-block w-100" alt="...">
             </div>
-            <div class="carousel-caption d-flex align-items-center justify-content-center flex-column">
-                <p class="carousel-inner-text">We are team of developers</p>
-                <a href="#loadFooter" class="btn btn-info bg-light text-primary" type="button">Contact Us</a>
+            <div class="carousel-caption divcaption-1">
+
+                <div class="right-carousel-1 col-5 col-sm-5 col-md-5 col-lg-5">
+                    <p>We take pride in our punctuality, consistently providing on-time delivery of projects, giving our clients peace of mind and confidence in our services.</p>
+                </div>
+                <div class="left-carousel-1 col-7 col-sm-7 col-md-7 col-lg-7">
+                    <p class="carousel-inner-text"><b>Service excellence is our priority</b></p>
+                    <p class="carousel-inner-text-sub">We create your Future</p>
+                    <a href="#loadFooter" class="contactUsBtn btn btn-secondary text-light" type="button">Contact Us</a>
+                </div>
             </div>
         </div>
         <div class="carousel-item">
             <div class="overlay">
-                <img src="assets/Home/4.jpg" class="d-block w-100" alt="...">
+                <img src="assets/Home/44.jpg" class="d-block w-100" alt="...">
             </div>
-            <div class="carousel-caption d-flex align-items-center justify-content-center flex-column">
-                <p class="carousel-inner-text">We are team of developers</p>
-                <a href="#loadFooter" class="btn btn-info bg-light text-primary" type="button">Contact Us</a>
+            <div class="carousel-caption divcaption-1">
+                <div class="left-carousel-1 col-7 col-sm-7 col-md-7 col-lg-7">
+                    <p class="carousel-inner-text"><b>Reliable, robust software solutions</b></p>
+                    <p class="carousel-inner-text-sub">We create your Future</p>
+                    <a href="#loadFooter" class="contactUsBtn btn btn-info text-light" type="button">Contact Us</a>
+                </div>
+                <div class="right-carousel-1 col-5 col-sm-5 col-md-5 col-lg-5">
+                    <p>Excellence is not a goal, it's a standard we uphold in every project. We're committed to delivering software solutions that not only meet but exceed our clients' expectations.</p>
+                </div>
             </div>
         </div>
     </div>
