Implemented Services in home

--- a/index.html
+++ b/index.html
@@ -136,77 +136,70 @@
 
 <!--text------------------------------------------------------------------------------------------------>
 
-<div class="main-service-title-sub reveal"><p><b>We create your Future</b></p></div>
+<div class="main-service-title-sub"><p class="reveal"><b>We create your Future</b></p></div>
 
 
 <!--services--------------------------------------------------------------------------------------------->
 <div id="services" class="services">
     <div class="main-service-title reveal"><p><b>Quality, punctuality, excellence</b></p></div>
-    <div class="card-service">
-        <div class="row common-innercard-service card-service-1 col-12 col-sm-12 col-md-12 col-lg-12">
-            <div class="card-1 col-12 col-sm-6 col-md-4 col-lg-4 reveal">
-                <div class="commoncard">
-                    <a href="Products/mobileApp/mobileApp.html" class="commoncard">
-                        <div class="card-img">
-                            <img src="assets/Products/card/mobileAppDevelopment.png" class="img-fluid rounded-start" alt="...">
-                        </div>
-                    </a>
-                    <div class="card-body ">
-                        <h5 class="card-title">Mobile App Development</h5>
-                        <p class="card-text">Convert your idea into the mobile app with our amazing service</p>
-                    </div>
+    <div class="column scrollable-cards-container">
+        <div class="commoncard col-12 col-sm-12 col-md-4 col-lg-4">
+            <a href="Products/mobileApp/mobileApp.html" class="commoncard">
+                <div class="card-img">
+                    <img src="assets/Products/card/mobileAppDevelopment.png" class="img-fluid rounded-start" alt="...">
                 </div>
-            </div>
-            <div class="card-2 col-12 col-sm-6 col-md-4 col-lg-4 reveal">
-                <div class="commoncard">
-                    <a href="Products/desktopSoft/desktopSoft.html" class="commoncard">
-                        <div class="card-img">
-                            <img src="assets/Products/card/desktopApp.png" class="img-fluid rounded-start" alt="...">
-                        </div>
-                    </a>
-                    <div class="card-body">
-                        <h5 class="card-title">Desktop Software Development</h5>
-                        <p class="card-text">We can bring your idea to the desktop</p>
-                    </div>
-                </div>
+            </a>
+            <div class="card-body">
+                <h5 class="card-title">Mobile App Development</h5>
+                <p class="card-text">Convert your idea into the mobile app with our amazing service  Convert your idea into the mobile app with our amazing service</p>
             </div>
         </div>
 
-        <div class="row common-innercard-service card-service-2 col-12 col-sm-12 col-md-12 col-lg-12">
-            <div class="card-3 col-12 col-sm-6 col-md-4 col-lg-4 reveal">
-                <div class="commoncard">
-                    <a href="Products/webApp/webApp.html" class="commoncard">
-                        <div class="card-img">
-                            <img src="assets/Products/card/webApplication.jpg" class="img-fluid rounded-start" alt="...">
-                        </div>
-                    </a>
-                    <div class="card-body">
-                        <h5 class="card-title">Web Application Development</h5>
-                        <p class="card-text">Make your ideas more interesting way.</p>
-                    </div>
+        <div class="commoncard col-12 col-sm-12 col-md-4 col-lg-4">
+            <a href="Products/desktopSoft/desktopSoft.html" class="commoncard">
+                <div class="card-img">
+                    <img src="assets/Products/card/desktopApp.png" class="img-fluid rounded-start" alt="...">
                 </div>
+            </a>
+            <div class="card-body">
+                <h5 class="card-title">Desktop Software Development</h5>
+                <p class="card-text">We can bring your idea to the desktop</p>
             </div>
-            <div class="card-4 col-12 col-sm-6 col-md-4 col-lg-4 reveal">
-                <div class="commoncard">
-                    <a href="Products/webSite/webSite.html" class="commoncard">
-                        <div class="card-img">
-                            <img src="assets/Products/card/websiteDevelopment.png" class="img-fluid rounded-start" alt="...">
-                        </div>
-                    </a>
-                    <div class="card-body">
-                        <h5 class="card-title">WebSite Development</h5>
-                        <p class="card-text">Responsive more interesting websites will help you to grow your business</p>
-                    </div>
+        </div>
+
+        <div class="commoncard col-12 col-sm-12 col-md-4 col-lg-4">
+            <a href="Products/webApp/webApp.html" class="commoncard">
+                <div class="card-img">
+                    <img src="assets/Products/card/webApplication.jpg" class="img-fluid rounded-start" alt="...">
                 </div>
+            </a>
+            <div class="card-body">
+                <h5 class="card-title">Web Application Development</h5>
+                <p class="card-text">Make your ideas more interesting way.</p>
+            </div>
+        </div>
+
+        <div class="commoncard col-12 col-sm-12 col-md-4 col-lg-4">
+            <a href="Products/webSite/webSite.html" class="commoncard">
+                <div class="card-img">
+                    <img src="assets/Products/card/websiteDevelopment.png" class="img-fluid rounded-start" alt="...">
+                </div>
+            </a>
+            <div class="card-body">
+                <h5 class="card-title">WebSite Development</h5>
+                <p class="card-text">Responsive more interesting websites will help you to grow your business</p>
             </div>
         </div>
     </div>
 </div>
 
 
+
+
+
 <!--text------------------------------------------------------------------------------------------------>
 
-<div class="main-service-title-sub reveal"><p><b>We are team of developers</b></p></div>
+<div class="main-service-title-sub"><p class="reveal"><b>Exceeding client expectations</b></p></div>
 
 <!--footer--------------------------------------------------------------------------------------------->
 <div id="loadFooter" class="footer"></div>
