Added Blog page

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 <a class="nav-link active text-white" aria-current="page" href="index.html">Home</a>
                 <a class="nav-link text-white" href="#services">Services</a>
                 <a class="nav-link text-white" href="Products/products.html">Products</a>
+                <a class="nav-link text-white" href="https://crossoriginblog.blogspot.com/">Blogs</a>
                 <a class="nav-link text-white" href="AboutUs/aboutUs.html">About Us</a>
             </div>
         </div>
